# FedHDPrivacy

./: .gitignore  CHANGELOG.md  CITATION.cff  FedHDPrivacy.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  mnist.yaml  no_privacy.yaml  quick.yaml
docs/: ALGORITHM.md  REPRODUCING.md
notebooks/: FedHDPrivacy_walkthrough.ipynb
scripts/: plot_noise_schedule.py  sweep_privacy_budget.py
src/fedhdprivacy/: __init__.py  cli.py  config.py  data.py  federated.py  hdc.py  metrics.py  partition.py  privacy.py  utils.py
tests/: test_device.py  test_hdc.py  test_pipeline.py  test_privacy.py
