[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedhdprivacy"
version = "1.0.1"
description = "Privacy-preserving federated learning with differentially private hyperdimensional computing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Fardin Jalil Piran", email = "fardin.jalil_piran@uconn.edu" },
    { name = "Zhiling Chen", email = "zhiling.chen@uconn.edu" },
    { name = "Mohsen Imani", email = "m.imani@uci.edu" },
    { name = "Farhad Imani", email = "farhad.imani@uconn.edu" },
]
keywords = [
    "federated learning",
    "differential privacy",
    "hyperdimensional computing",
    "explainable AI",
    "internet of things",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# torchhd provides the reference Density encoder. Without it the package falls
# back to an equivalent pure-PyTorch implementation, so this is optional.
hdc = ["torch-hd>=5.0"]
vision = ["torchvision>=0.14"]
plots = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "ruff>=0.4", "jupyter>=1.0"]
all = [
    "torch-hd>=5.0",
    "torchvision>=0.14",
    "matplotlib>=3.5",
    "pytest>=7.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/FardinJalilPiran/FedHDPrivacy"
Paper = "https://doi.org/10.1016/j.compeleceng.2025.110261"
Preprint = "https://arxiv.org/abs/2411.01140"

[project.scripts]
fedhdprivacy = "fedhdprivacy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
